--- a/MovieWebAPI/appsettings.json
+++ b/MovieWebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "DataSource": {
+    "APIUrl": "http://www.omdbapi.com",
+    "APIKey": "cfe50d1b"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=moviedb.c1u3exyscz5k.eu-central-1.rds.amazonaws.com;Initial Catalog=MovieDb;persist security info=True;user id=sa;password=AB123456*-;multipleactiveresultsets=True;application name=EntityFramework"
   },
