--- a/MovieWebAPI/appsettings.json
+++ b/MovieWebAPI/appsettings.json
@@ -3,6 +3,10 @@
     "APIUrl": "http://www.omdbapi.com",
     "APIKey": "cfe50d1b"
   },
+  "Caching": {
+    "GetFromMinutes": "12",
+    "UpdateFromMinutes": "10"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=moviedb.c1u3exyscz5k.eu-central-1.rds.amazonaws.com;Initial Catalog=MovieDb;persist security info=True;user id=sa;password=AB123456*-;multipleactiveresultsets=True;application name=EntityFramework"
   },
