Authentication integration with JWT Token

--- a/MovieWebAPI/appsettings.json
+++ b/MovieWebAPI/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "DataSource": {
-    "APIUrl": "http://www.omdbapi.com",
-    "APIKey": "cfe50d1b"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Username": "johndoe",
+    "Password": "Ab123456*-"
   },
   "Caching": {
     "GetFromMinutes": "12",
@@ -10,10 +11,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=moviedb.c1u3exyscz5k.eu-central-1.rds.amazonaws.com;Initial Catalog=MovieDb;persist security info=True;user id=sa;password=AB123456*-;multipleactiveresultsets=True;application name=EntityFramework"
   },
+  "DataSource": {
+    "APIUrl": "http://www.omdbapi.com",
+    "APIKey": "cfe50d1b"
+  },
+  "Jwt": {
+    "Audience": "movie",
+    "Issuer": "http://localhost:13388",
+    "Key": "wdcpr5Ff5YahZdc4gfubb7pDasU9yb97"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
