10 minute data update with Hosted Service

--- a/MovieWebAPI/appsettings.json
+++ b/MovieWebAPI/appsettings.json
@@ -5,15 +5,15 @@
     "Password": "Ab123456*-"
   },
   "Caching": {
-    "GetFromMinutes": "12",
-    "UpdateFromMinutes": "10"
+    "GetFromMinutes": "12"    
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=moviedb.c1u3exyscz5k.eu-central-1.rds.amazonaws.com;Initial Catalog=MovieDb;persist security info=True;user id=sa;password=AB123456*-;multipleactiveresultsets=True;application name=EntityFramework"
   },
   "DataSource": {
     "APIUrl": "http://www.omdbapi.com",
-    "APIKey": "cfe50d1b"
+    "APIKey": "cfe50d1b",
+    "UpdateFromMinutes": "10"
   },
   "Jwt": {
     "Audience": "movie",
