Create MovieWebAPI Test

--- a/MovieWebAPI/appsettings.json
+++ b/MovieWebAPI/appsettings.json
@@ -16,7 +16,7 @@
     "UpdateFromMinutes": "10"
   },
   "Jwt": {
-    "Audience": "movie",
+    "Audience": "http://localhost:4200/",
     "Issuer": "http://localhost:13388",
     "Key": "wdcpr5Ff5YahZdc4gfubb7pDasU9yb97"
   },
